@@ -2,27 +2,39 @@ package controller;
 
 import controller.interfaces.IBookController;
 import models.Book;
+import models.BookStatus;
 import models.dto.FullBookDescription;
 import repository.interfaces.IBookRepository;
-import util.ValidationUtils;
+import util.Validator;
 
 import java.util.Comparator;
 import java.util.stream.Collectors;
 
+import static models.BookStatus.*;
+
 public class BookController implements IBookController {
+
     private final IBookRepository repo;
 
     public BookController(IBookRepository repo) {
         this.repo = repo;
     }
 
+    private static boolean test(Book b) {
+        if (READ != b.getStatus()) {
+            return false;
+        } else {
+            return true;
+        }
+    }
+
     @Override
     public String create(String title, String genre, Integer authorId) {
-        title = ValidationUtils.normalize(title);
-        genre = ValidationUtils.normalize(genre);
+        title = Validator.normalize(title);
+        genre = Validator.normalize(genre);
 
-        if (!ValidationUtils.isNonBlank(title)) return "Title can't be empty.";
-        if (!ValidationUtils.isNonBlank(genre)) return "Genre can't be empty.";
+        if (!Validator.isNonBlank(title)) return "Title can't be empty.";
+        if (!Validator.isNonBlank(genre)) return "Genre can't be empty.";
         if (authorId != null && authorId <= 0) return "Author ID must be positive or 0.";
 
         Book book = new Book(title, genre, authorId);
@@ -31,9 +43,8 @@ public class BookController implements IBookController {
 
     @Override
     public String showAll() {
-        var books = repo.getAllBooks();
-
-        books = books.stream()
+        var books = repo.getAllBooks()
+                .stream()
                 .sorted(Comparator.comparingInt(Book::getId))
                 .collect(Collectors.toList());
 
@@ -42,8 +53,8 @@ public class BookController implements IBookController {
 
     @Override
     public String showByGenre(String genre) {
-        genre = ValidationUtils.normalize(genre);
-        if (!ValidationUtils.isNonBlank(genre)) return "Genre can't be empty.";
+        genre = Validator.normalize(genre);
+        if (!Validator.isNonBlank(genre)) return "Genre can't be empty.";
 
         var books = repo.getBooksByGenre(genre);
         if (books.isEmpty()) return "No books found for genre: " + genre;
@@ -55,12 +66,11 @@ public class BookController implements IBookController {
     public String showReadSortedByTitle() {
         var books = repo.getAllBooks()
                 .stream()
-                .filter(b -> "Read".equalsIgnoreCase(b.getStatus())) // lambda
-                .sorted((a, b) -> a.getTitle().compareToIgnoreCase(b.getTitle())) // lambda
-                .collect(Collectors.toList());
+                .filter(BookController::test)
+                .sorted(Comparator.comparing(Book::getTitle, String.CASE_INSENSITIVE_ORDER))
+                .toList();
 
-        if (books.isEmpty()) return "No read books found.";
-        return formatBooks(books);
+        return "No read books found.";
     }
 
     private String formatBooks(Iterable<Book> books) {
@@ -77,19 +87,19 @@ public class BookController implements IBookController {
 
     @Override
     public String markRead(int id) {
-        if (!ValidationUtils.isPositiveId(id)) return "ID must be positive.";
-        return repo.updateStatus(id, "Read") ? "Status is changed." : "Error.";
+        if (!Validator.isPositiveId(id)) return "ID must be positive.";
+        return repo.updateStatus(id, READ) ? "Status is changed." : "Error.";
     }
 
     @Override
     public String markNotRead(int id) {
-        if (!ValidationUtils.isPositiveId(id)) return "ID must be positive.";
-        return repo.updateStatus(id, "Not read") ? "Status is changed." : "Error.";
+        if (!Validator.isPositiveId(id)) return "ID must be positive.";
+        return repo.updateStatus(id, NOT_READ) ? "Status is changed." : "Error.";
     }
 
     @Override
     public String getById(int id) {
-        if (!ValidationUtils.isPositiveId(id)) return "ID must be positive.";
+        if (!Validator.isPositiveId(id)) return "ID must be positive.";
 
         Book b = repo.getBookById(id);
         if (b == null) return "Book not found.";
@@ -115,9 +125,9 @@ public class BookController implements IBookController {
 
     @Override
     public String borrowBook(int bookId, String borrowerName) {
-        if (!ValidationUtils.isPositiveId(bookId)) return "Book ID must be positive.";
-        borrowerName = ValidationUtils.normalize(borrowerName);
-        if (!ValidationUtils.isNonBlank(borrowerName)) return "Name can't be empty.";
+        if (!Validator.isPositiveId(bookId)) return "Book ID must be positive.";
+        borrowerName = Validator.normalize(borrowerName);
+        if (!Validator.isNonBlank(borrowerName)) return "Name can't be empty.";
 
         if (!repo.bookExists(bookId)) return "Book not found.";
         if (repo.isBookBorrowed(bookId)) return "This book is already borrowed.";
@@ -130,7 +140,7 @@ public class BookController implements IBookController {
 
     @Override
     public String returnBook(int bookId) {
-        if (!ValidationUtils.isPositiveId(bookId)) return "Book ID must be positive.";
+        if (!Validator.isPositiveId(bookId)) return "Book ID must be positive.";
         if (!repo.bookExists(bookId)) return "Book not found.";
 
         boolean ok = repo.returnBook(bookId);
@@ -139,7 +149,7 @@ public class BookController implements IBookController {
 
     @Override
     public String getFullDescription(int bookId) {
-        if (!ValidationUtils.isPositiveId(bookId)) return "Book ID must be positive.";
+        if (!Validator.isPositiveId(bookId)) return "Book ID must be positive.";
 
         FullBookDescription d = repo.getFullBookDescription(bookId);
         if (d == null) return "Book not found.";
@@ -152,15 +162,43 @@ public class BookController implements IBookController {
         sb.append("Status: ").append(d.getStatus()).append("\n");
         sb.append("Author: ").append(d.getAuthorName()).append("\n");
 
-        if (d.getBorrowerName() != null) {
-            sb.append("Borrowed by: ").append(d.getBorrowerName()).append("\n");
-            sb.append("Due date: ").append(d.getDueDate()).append("\n");
-            sb.append("Returned: ").append(d.getReturned()).append("\n");
-        } else {
-            sb.append("Borrowed by: -\n");
-            sb.append("Due date: -\n");
-            sb.append("Returned: -\n");
-        }
+        d.getBorrowerName();
+        sb.append("Borrowed by: -\n");
+        sb.append("Due date: -\n");
+        sb.append("Returned: -\n");
         return sb.toString();
+    }
+
+    @Override
+    public String changeStatus(int id, BookStatus status) {
+        if (!Validator.isPositiveId(id)) return "ID must be positive.";
+
+        boolean ok = repo.updateStatus(id, status);
+        return ok ? "Status updated to " + status : "Error updating status.";
+    }
+
+    @Override
+    public String showAvailableBooks() {
+        var books = repo.getAllBooks()
+                .stream()
+                .filter(b -> b.getStatus() == AVAILABLE)
+                .sorted(Comparator.comparing(Book::getTitle))
+                .collect(Collectors.toList());
+
+        if (books.isEmpty()) return "No available books.";
+
+        return formatBooks(books);
+    }
+    @Override
+    public String showBorrowedBooks() {
+        var books = repo.getAllBooks()
+                .stream()
+                .filter(b -> b.getStatus() == BORROWED)
+                .sorted(Comparator.comparing(Book::getTitle))
+                .collect(Collectors.toList());
+
+        if (books.isEmpty()) return "No borrowed books.";
+
+        return formatBooks(books);
     }
 }
